Fix deprecation warnings of constructors (#126)
* ersetze als deprecated markierten Konstruktor von Integer(int)

* ersetze als deprecated markierten Konstruktor von Boolean(boolean)

* ersetze als deprecated markierten Konstruktor von Long(long)

* ersetze als deprecated markierten Konstruktor von Double(double)