@@ -159,7 +159,7 @@ public class AuslandsUeberweisungImpl extends AbstractBaseUeberweisungImpl imple
    */
   public void setTerminUeberweisung(boolean termin) throws RemoteException
   {
-    setAttribute("banktermin",termin ? new Integer(1) : null);
+    setAttribute("banktermin",termin ? Integer.valueOf(1) : null);
   }
   
   /**
@@ -176,7 +176,7 @@ public class AuslandsUeberweisungImpl extends AbstractBaseUeberweisungImpl imple
    */
   public void setUmbuchung(boolean b) throws RemoteException
   {
-    setAttribute("umbuchung",b ? new Integer(1) : null);
+    setAttribute("umbuchung",b ? Integer.valueOf(1) : null);
   }
 
 
